give min width to exp gained section to prevent shift when adjusting experience

--- a/src/app/ui/account-creation/account-setup/SetupUI/QuestBoard/QuestBoardItems/QuestBoardItem/styles.module.css
+++ b/src/app/ui/account-creation/account-setup/SetupUI/QuestBoard/QuestBoardItems/QuestBoardItem/styles.module.css
@@ -23,6 +23,7 @@
 .experienceSection {
   display: flex;
   gap: 0.5rem;
+  min-width: 10rem;
 }
 
 .experienceButtons {
